--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,3 @@
-<p>welcome works!</p>
-<button routerLink="/auth/login">Login</button>
-<button routerLink="/auth/signup">Signup</button>
+<button routerLink="/auth/login" class="btn btn-primary m-3">Login</button>
+<button routerLink="/auth/signup" class="btn btn-secondary m-3">Signup</button>
+
