--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,31 @@
-<p>login works!</p>
+<section>
+  <div class="card-container">
+    <div class="card-visuals"></div>
+    <div class="card-form">
+
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <h3 class="text-center">Login</h3>
+        <div class="m-3">
+          <label>Email Address</label>
+          <input type="email" class="form-control" placeholder="Enter email address" formControlName="email"ngDefaultControl>
+        </div>
+        <div class="m-3">
+          <label>Password</label>
+          <input type="password" class="form-control" placeholder="Create a password" formControlName="password" ngDefaultControl required>
+        </div>
+        <button [disabled]="!loginForm.valid" type="submit" class="btn btn-primary m-3">Submit</button>
+        <div *ngIf="successAlert" class="alert alert-success m-3" role="alert">
+         Login Successfully
+        </div>
+      </form>
+
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
