--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -21,7 +21,7 @@
        </div>
        <div class="m-3">
          <label>Password</label>
-         <input type="password" class="form-control" placeholder="Create a password" formControlName="password" ngDefaultControl>
+         <input type="password" class="form-control" placeholder="Create a password" formControlName="password" ngDefaultControl required>
        </div>
        <div class="m-3">
          <input class="form-check-input" type="checkbox" formControlName="checkBox" ngDefaultControl>
