--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -13,14 +13,6 @@ section{
   background-color: white;
   filter: drop-shadow(0.5rem 0.5rem 0.75rem #b3cde0);
 }
-form{
-  display: grid;
-  grid-template-rows: repeat(7,auto);
-}
-form>button{
-  justify-self: center;
-  width: 100px;
-}
 .card-visuals,.card-form{
   width: 50%;
   height: 100%;
@@ -30,7 +22,15 @@ form>button{
   background-size: auto 100%;
   background-position-x: center;
   border-radius: 15px 0px 0px 15px;
-
+}
+form{
+  display: grid;
+  grid-template-rows: repeat(4,auto);
+  width: 90%;
+}
+form>button{
+  justify-self: center;
+  width: 100px;
 }
 .card-form{
   display: flex;
@@ -63,10 +63,13 @@ form>button{
   }
   .card-form{
     height: 100%;
-    padding: 25px;
+    padding: 15px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  form{
+    width: 100%;
   }
 }
