--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -26,6 +26,7 @@ section{
 form{
   display: grid;
   grid-template-rows: repeat(7,auto);
+  width: 90%;
 }
 form>button{
   justify-self: center;
@@ -62,10 +63,13 @@ form>button{
   }
   .card-form{
     height: 100%;
-    padding: 25px;
+    padding: 15px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  form{
+    width: 100%;
   }
 }
