--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -31,6 +31,9 @@ form{
 form>button{
   justify-self: center;
   width: 100px;
+  background-color: #84f8d5 !important;
+  border: none;
+  color: black;
 }
 .card-form{
   display: flex;
@@ -51,7 +54,7 @@ form>button{
     margin:0;
   }
   .card-container{
-    border-top: 5px solid #6cacfc;
+    border-top: 5px solid #84f8d5;
     border-radius: 0px 0px 20px 20px;
     height: auto;
     width: 90%;
