--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,17 +5,17 @@
 
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <h3 class="text-center">Login</h3>
-        <div class="m-3">
+        <div class="m-1">
           <label>Email Address</label>
           <input type="email" class="form-control" placeholder="Enter email address" formControlName="email"ngDefaultControl>
         </div>
-        <div class="m-3">
+        <div class="m-1">
           <label>Password</label>
           <input type="password" class="form-control" placeholder="Create a password" formControlName="password" ngDefaultControl required>
         </div>
         <button [disabled]="!loginForm.valid" type="submit" class="btn btn-primary m-3">Submit</button>
         <div *ngIf="successAlert" class="alert alert-success m-3" role="alert">
-         Login Successfully
+          Login successful
         </div>
       </form>
 
