--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -2,28 +2,27 @@
  <div class="card-container">
    <div class="card-visuals"></div>
    <div class="card-form">
-
      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
        <h3 class="text-center">Signup</h3>
        <div class="d-flex">
-         <div class="m-3 w-50">
+         <div class="m-1 w-50">
            <label>First Name</label>
            <input type="text" class="form-control" placeholder="Enter first name" formControlName="firstName" ngDefaultControl>
          </div>
-         <div class="m-3 w-50">
+         <div class="m-1 w-50">
            <label>Last Name</label>
            <input type="text" class="form-control" placeholder="Enter last name" formControlName="lastName" ngDefaultControl>
          </div>
       </div>
-       <div class="m-3">
+       <div class="m-1">
          <label>Email Address</label>
          <input type="email" class="form-control" placeholder="Enter email address" formControlName="email" ngDefaultControl>
        </div>
-       <div class="m-3">
+       <div class="m-1">
          <label>Password</label>
          <input type="password" class="form-control" placeholder="Create a password" formControlName="password" ngDefaultControl required>
        </div>
-       <div class="m-3">
+       <div class="m-1">
          <input class="form-check-input" type="checkbox" formControlName="checkBox" ngDefaultControl>
          <label  class="form-check-label">
            Terms and Conditions
@@ -31,7 +30,7 @@
        </div>
        <button [disabled]="!signupForm.valid" type="submit" class="btn btn-primary m-3">Submit</button>
        <div *ngIf="successAlert" class="alert alert-success m-3" role="alert">
-         This is a success alert—check it out!
+         Signup successful
        </div>
      </form>
 
