--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -1,44 +1,81 @@
 header{
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 12%;
+  box-shadow: 0 1px 5px 0px #d0d0d0;
+}
+.logo-brand>span{
+  padding: 0 5px;
+  font-weight: 700;
+  font-size: 28px;
+}
+.menu-brand{
+  display: grid;
+  grid-template-columns: repeat(7,auto);
+  align-items: center;
+  gap:15px;
+}
+.menu-brand>a{
+  text-decoration: none;
+  color: black;
+  text-align: center;
+}
+.menu-brand>a:hover{
+  color: #84f8d5;
+}
+.signup-btn{
+  background-color: #84f8d5 !important;
+  border: none;
+  color: black;
+}
+.logo-brand{
+  display: flex;
   align-items: center;
 }
-.menu>a{
-  text-decoration: none;
+.menu-brand-mobile{
+  display: none;
 }
 .hamburger{
   display: none;
 }
-.mobile-menu{
-  display: none;
-  height: auto;
-}
-@media screen and (max-width: 650px){
-  header>h3,.hamburger>i{
-    color: white;
-  }
-  .mobile-menu{
-    display: grid;
-    grid-template-columns: repeat(5,auto);
-    border: 1px solid #0d6efd;
-  }
-  .mobile-menu>a{
-    text-align: center;
-    font-size: small;
-    color: #0d6efd;
-    text-decoration: none;
-  }
+
+
+@media screen and (max-width: 1200px){
   header{
-    background-color: #0d6efd;
-    justify-content: space-between;
+    padding: 5px 15px;
   }
-  .menu{
-    display: none;
+}
+@media screen and (max-width: 800px){
+  header{
+    padding: 5px 5px;
   }
-  .btn{
+  .menu-brand{
     display: none;
   }
   .hamburger{
     display: block;
   }
+  .hamburger>i{
+    font-size: 20px;
+    padding: 5px;
+    text-align: center;
+  }
+  .logo-brand>img{
+    width: 25px;
+  }
+  .logo-brand>span{
+    font-weight: 500;
+    font-size: 26px;
+  }
+  .menu-brand-mobile{
+    display: grid;
+    grid-template-columns: repeat(2,auto);
+    align-items: center;
+    gap:15px;
+  }
+  .menu-brand-mobile>button{
+    font-size: small;
+  }
+
 }
