--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,6 +1,11 @@
 <section>
  <div class="card-container">
-   <div class="card-visuals"></div>
+   <div class="card-visuals">
+     <div class="d-flex flex-column text-center brand-auth">
+       <img class="m-1" src="assets/logo.png" width="80px">
+       <span class="m-1">PRAVI</span>
+     </div>
+   </div>
    <div class="card-form">
      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
        <h3 class="text-center">Signup</h3>
