--- a/src/app/dashboard/home/home.component.css
+++ b/src/app/dashboard/home/home.component.css
@@ -1,7 +1,5 @@
 .home-container{
     background-color:#F7F7F6;
     height: 92vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    padding: 12px;
 }
