Update Sidenav to basic

--- a/src/app/dashboard/sidenav/sidenav.component.html
+++ b/src/app/dashboard/sidenav/sidenav.component.html
@@ -8,6 +8,7 @@
         <span class="profile-name">{{profile.name}}</span>
         <span class="profile-role">{{profile.role}}</span>
     </div>
-    <a routerLink="/dashboard/main/home"  class="sidenav-menu-item"></a>
+    <a routerLink="/dashboard/main/home" >Home</a>
+    <a routerLink="/dashboard/main/ticket" >Ticket</a>
 
 </div>
