toggle-button-worked-part-2

--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <i class="bi bi-list"></i>
+  <i (click)="toggle()" class="bi bi-list"></i>
     <div class="avatar">
         <i class="bi bi-person-square"></i>
     </div>
