--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -12,13 +12,13 @@
         <h3 class="text-center">Login</h3>
         <div class="m-1">
           <label>Email Address</label>
-          <input type="email" class="form-control" placeholder="Enter email address" formControlName="email"ngDefaultControl>
+          <input type="email" class="form-control" placeholder="Enter email address" formControlName="email"ngDefaultControl pattern="^[a-zA-Z0-9+_.-]+@[a-zA-Z0-9.-]+$">
         </div>
         <div class="m-1">
           <label>Password</label>
           <input type="password" class="form-control" placeholder="Create a password" formControlName="password" ngDefaultControl required>
         </div>
-        <button [disabled]="!loginForm.valid" type="submit" class="btn btn-primary m-3">Submit</button>
+        <button routerLink="/dashboard/main/home" [disabled]="!loginForm.valid" type="submit" class="btn btn-primary m-3">Submit</button>
         <div *ngIf="successAlert" class="alert alert-success m-3" role="alert">
           Login successful
         </div>
