--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -11,3 +11,9 @@ app-sidenav{
     width: 400px;
     height: 100vh;
 }
+
+@media screen and(max-width:750px) {
+    app-sidenav{
+        width: 50%;
+    }
+}
