--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="dashboard-root-container">
-    <app-sidenav></app-sidenav>
+    <app-sidenav *ngIf="toggleStatus"></app-sidenav>
     <div class="dashboard-main-content">
-        <app-header></app-header>
+        <app-header (toggleEvent)="toggle()"></app-header>
         <router-outlet></router-outlet>
     </div>
 </div>
