Removal of NgIf and adding ngStyle

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="dashboard-root-container">
-    <app-sidenav *ngIf="toggleStatus"></app-sidenav>
+    <app-sidenav [ngStyle]="{'display':getSidenavDisplay()}"> </app-sidenav>
     <div class="dashboard-main-content">
         <app-header (toggleEvent)="toggle()"></app-header>
         <router-outlet></router-outlet>
