--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -11,7 +11,6 @@ section{
   width: 60%;
   height: 70%;
   background-color: white;
-  filter: drop-shadow(0.5rem 0.5rem 0.75rem #b3cde0);
 }
 .card-visuals,.card-form{
   width: 50%;
@@ -51,6 +50,28 @@ form>button{
   margin: 0 5px;
 }
 
+.bg {
+  animation:slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+  bottom:0;
+  left:-50%;
+  opacity:.5;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index:-1;
+}
+
+.bg2 {
+  animation-direction:alternate-reverse;
+  animation-duration:4s;
+}
+
+.bg3 {
+  animation-duration:5s;
+}
+
+
 @media screen and (max-width: 1150px) {
   .card-container{
     width: 80%;
@@ -81,5 +102,14 @@ form>button{
   }
   form{
     width: 100%;
+  }
+}
+
+@keyframes slide {
+  0% {
+    transform:translateX(-25%);
+  }
+  100% {
+    transform:translateX(25%);
   }
 }
