--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,8 @@
 <section>
+  
   <div class="card-container">
+
+
     <div class="card-visuals">
       <div class="d-flex flex-column text-center brand-auth">
         <img class="m-1" src="assets/logo.png" width="80px">
@@ -12,13 +15,16 @@
         <h3 class="text-center">Login</h3>
         <div class="m-1">
           <label>Email Address</label>
-          <input type="email" class="form-control" placeholder="Enter email address" formControlName="email"ngDefaultControl pattern="^[a-zA-Z0-9+_.-]+@[a-zA-Z0-9.-]+$">
+          <input type="email" class="form-control" placeholder="Enter email address" formControlName="email"
+            ngDefaultControl pattern="^[a-zA-Z0-9+_.-]+@[a-zA-Z0-9.-]+$">
         </div>
         <div class="m-1">
           <label>Password</label>
-          <input type="password" class="form-control" placeholder="Create a password" formControlName="password" ngDefaultControl required>
+          <input type="password" class="form-control" placeholder="Create a password" formControlName="password"
+            ngDefaultControl required>
         </div>
-        <button routerLink="/dashboard/main/home" [disabled]="!loginForm.valid" type="submit" class="btn btn-primary m-3">Submit</button>
+        <button routerLink="/dashboard/main/home" [disabled]="!loginForm.valid" type="submit"
+          class="btn btn-primary m-3">Submit</button>
         <div *ngIf="successAlert" class="alert alert-success m-3" role="alert">
           Login successful
         </div>
@@ -27,10 +33,3 @@
     </div>
   </div>
 </section>
-
-
-
-
-
-
-
