--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,4 +1,7 @@
 <section>
+  <div class="bg"></div>
+  <div class="bg bg2"></div>
+  <div class="bg bg3"></div>
  <div class="card-container">
    <div class="card-visuals">
      <div class="d-flex flex-column text-center brand-auth">
