--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,8 +1,8 @@
 <section>
-  
+  <div class="bg"></div>
+  <div class="bg bg2"></div>
+  <div class="bg bg3"></div>
   <div class="card-container">
-
-
     <div class="card-visuals">
       <div class="d-flex flex-column text-center brand-auth">
         <img class="m-1" src="assets/logo.png" width="80px">
